bugfix: builtins/export.c: key_exists():
- changed strncmp arguments from: (temp->key, arr[0], ft_strlen(temp->key))
-                                 (arr[0], temp->key, ft_strlen(arr[0]))
