@@ -23,4 +23,7 @@ typedef struct 		s_env
 
 }					t_env;
 
+char 	*dup_rest(char *s, int start);
+char	*ft_strdup_till_c(const char *s1, char c);
+
 #endif
